--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900,900i&display=swap');
 @import "reset.css";
 @import "status-bar.css";
+@import "header.css";
+@import "nav-bar.css";
 
 body{
     background-color: white;
     padding: 10px 20px;
     color: #020202;
     font-family: 'Montserrat', sans-serif;
+}
+
+a{
+    color: inherit;
+}
+
+* {
+    box-sizing: border-box;
 }
