--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900,900i&display=swap');
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css";
+@import "friends.css";
+@import "find.css";
+@import "more.css";
+@import "settings.css";
 
 body{
     background-color: white;
@@ -13,6 +18,7 @@ body{
 
 a{
     color: inherit;
+    text-decoration: none;
 }
 
 * {
